# flex-alchemy

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
example/: alembic.ini
example/migrations/: env.py
example/migrations/versions/: 20250312174851_d7cc6e42b793_create_users_table.py  20250312175651_b063f71125af_create_permissions_table.py  20250313114401_2d5f574cc368_add_enable_field_to_user_table.py
example/models/: __init__.py  base.py  permission.py  user.py  user_permission.py
examples/migrations/: env.py
examples/migrations/versions/: 20250312174851_d7cc6e42b793_create_users_table.py  20250312175651_b063f71125af_create_permissions_table.py  20250313135319_2c776e03c600_add_user_permissions_table.py
examples/models/: __init__.py  _base.py  permission.py  user.py  user_permission.py
fluent_alchemy/: activerecord.py  exceptions.py  session.py
fluent_alchemy/builders/: __init__.py  base.py  complex.py  delete.py  insert.py  query.py  select.py  update.py  where.py
fluent_alchemy/mixins/: softdelete.py
fluent_alchemy/scopes/: softdelete.py
sqlalchemy_model/: __init__.py  activerecord.py  builder.py  session.py
sqlalchemy_model/mixins/: softdelete.py
sqlalchemy_model/scopes/: __init__.py  softdelete.py
src/: __init__.py  activerecord.py  session.py
src/builders/: base.py  delete.py  insert.py  select.py  update.py
src/flex_alchemy/: __init__.py  session.py
src/flex_alchemy/builders/: base.py  insert.py  update.py
src/mixins/: timestamp.py
src/scopes/: softdelete.py
tests/: conftest.py  models.py  test_activerecord.py  test_builders_delete.py  test_builders_insert.py  test_builders_query.py  test_builders_select.py  test_builders_update.py  test_querybuilder.py  test_users.py
tests/database/: alembic.ini
tests/database/migrations/: env.py
tests/database/migrations/versions/: 20240214125906_00f597e9aa61_.py
tests/integration/: conftest.py  test_activerecord.py  test_user.py
tests/unit/: test_delete_builder.py  test_insert_builder.py  test_select_builder.py  test_update_builder.py
