[project]
name = "fluent-alchemy"
version = "0.0.1"
description = "Use SQLAlchemy fluently"
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "MIT License" }
authors = ["Sam Yao <turisesonia@gmail.com>"]
keywords = ["sqlalchemy", "SQLAlchemy", "activerecord", "Active Record"]

[tool.poetry]
name = "fluent-alchemy"
version = "0.0.1"
description = "Use SQLAlchemy fluently"
authors = ["Sam Yao <turisesonia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.25"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
alembic = "^1.13.1"
faker = "^23.1.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
APP_DEBUG = true
