[tool.poetry]
name = "fluent-alchemy"
version = "0.0.1"
description = "Use SQLAlchemy fluently"
authors = ["Sam Yao <turisesonia@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["sqlalchemy", "SQLAlchemy", "activerecord", "Active Record"]
repository = "https://github.com/turisesonia/fluent-alchemy"
homepage = "https://github.com/turisesonia/fluent-alchemy"
documentation = "https://github.com/turisesonia/fluent-alchemy"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
alembic = "^1.13.1"
faker = "^23.1.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
APP_DEBUG = true
