[project]
name = "flex-alchemy"
version = "0.1.0"
description = "SQLAlchemy with Active Record - a fluent query builder and ActiveRecord implementation for SQLAlchemy"
authors = [{ name = "Sam Yao", email = "turisesonia@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["sqlalchemy (>=2.0,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
alembic = "^1.15.1"
faker = "^37.0.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
psycopg = { extras = ["binary", "pool"], version = "^3.2.6" }
python-dotenv = "^1.0.1"

[tool.poetry]
packages = [{ include = "flex_alchemy", from = "src" }]
